--- a/build-maven.gradle
+++ b/build-maven.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'java-library'
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
+if(JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_11)) {
+  apply plugin: 'org.openjfx.javafxplugin'
+}
 
 sourceSets {
   main.java.srcDir "src"
@@ -12,6 +15,11 @@ sourceSets {
 
 repositories {
   mavenCentral()
+}
+
+javafx {
+  version = "11.0.2"
+  modules = ['javafx.media', 'javafx.swing']
 }
 
 dependencies {
@@ -36,6 +44,7 @@ dependencies {
   testImplementation 'org.junit.jupiter:junit-jupiter-params:5.4.1'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.1'
   testImplementation 'org.mockito:mockito-core:2.25.1'
+
 }
 
 test {
