--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ before_install:
   - chmod +x gradlew
   - sudo apt-get -y install at-spi2-core
 
-jdk: openjdk11
+jdk: 
+  - openjdk11
+  - oraclejdk9
 
 git:
   depth: false
