--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,18 @@ buildscript {
   }
 }
  
- plugins {
+plugins {
   id 'com.stehno.natives' version '0.3.1'
   id 'org.sonarqube' version '2.8'
+}
+
+if(JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_11)) {
+  apply plugin: 'org.openjfx.javafxplugin'
+}
+
+javafx {
+  version = "11.0.2"
+  modules = ['javafx.media', 'javafx.swing']
 }
 
 natives {
