--- a/build-maven.gradle
+++ b/build-maven.gradle
@@ -12,6 +12,7 @@ sourceSets {
 
 repositories {
   mavenCentral()
+  jcenter()
 }
 
 dependencies {
@@ -25,6 +26,9 @@ dependencies {
   }
 
   implementation 'com.code-disaster.steamworks4j:steamworks4j:1.8.0'
+  
+  implementation 'com.github.zakgof:velvet-video:0.5.0'
+  implementation 'com.github.zakgof:velvet-video-natives:0.2.6.free'
   
   // JAXB modules for JDK 9 or higher
   implementation 'javax.activation:javax.activation-api:1.2.0'
