--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ buildscript {
 }
 
 natives {
-  configurations = ['runtimeClasspath']
   outputDir = 'libs'
 }
 
@@ -33,6 +32,7 @@ repositories {
 }
 
 dependencies {
+  implementation 'io.netty:netty-all:4.1.58.Final'
   implementation 'net.java.jinput:jinput:2.0.9'
   implementation 'net.java.jinput:jinput:2.0.9:natives-all'
   implementation 'com.googlecode.soundlibs:jorbis:0.0.17.4'
