--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ kotlin.code.style                                         = official
 systemProp.org.gradle.internal.publish.checksums.insecure = true
 
 # Litiengine version
-litiengine.version                                        = 0.5.1-beta
+litiengine.version                                        = 0.5.2-UNOFFICIAL-GAMEBUSTER
 
 # Plugins
 org.sonarqube.version                                     = 3.2.0
